@@ -274,12 +274,11 @@ $tabindex = 1;
 
 
 
-echo "<br><br>";
 echo "<form name='zoneform' method='post' action='zone-advanced.php' onSubmit='return phpAds_formZoneAdvSubmit() && phpAds_formCheck(this);'>";
 echo "<input type='hidden' name='zoneid' value='".(isset($zoneid) && $zoneid != '' ? $zoneid : '')."'>";
 echo "<input type='hidden' name='affiliateid' value='".(isset($affiliateid) && $affiliateid != '' ? $affiliateid : '')."'>";
 
-echo "<table border='0' width='100%' cellpadding='0' cellspacing='0'>";
+echo "<br><table border='0' width='100%' cellpadding='0' cellspacing='0'>";
 echo "<tr><td height='25' colspan='3'><b>".$strChainSettings."</b></td></tr>";
 echo "<tr height='1'><td colspan='3' bgcolor='#888888'><img src='images/break.gif' height='1' width='100%'></td></tr>";
 echo "<tr><td height='10' colspan='3'>&nbsp;</td></tr>";
@@ -349,7 +348,9 @@ if ($zone['delivery'] == phpAds_ZoneBanner)
 	echo "<br><br><br>";
 	echo "<table border='0' width='100%' cellpadding='0' cellspacing='0'>";
 	echo "<tr><td height='25' colspan='3'><b>".$strAppendSettings."</b></td></tr>";
-	echo "<tr height='1'><td colspan='3' bgcolor='#888888'><img src='images/break.gif' height='1' width='100%'></td></tr>";
+	echo "<tr height='1'><td width='30'><img src='images/break.gif' height='1' width='30'></td>";
+	echo "<td width='200'><img src='images/break.gif' height='1' width='200'></td>";
+	echo "<td width='100%'><img src='images/break.gif' height='1' width='100%'></td></tr>";
 	echo "<tr><td height='10' colspan='3'>&nbsp;</td></tr>";
 	
 	
