@@ -14,6 +14,10 @@
 
   02-13-2003 - default
     [+] strWeightIsNull
+    [u] strZoneAppendZoneSelection
+    [u] strZoneProbListChain
+    [u] strZoneProbNullPri
+    [u] strZoneProbListChainLoop
 
   02-12-2003 - default
     [+] strAppendOthers
